--- a/public/stylesheets/queue.css
+++ b/public/stylesheets/queue.css
@@ -1,6 +1,5 @@
 #queue {
-  border: 1px;
-  border-radius: 15px;
+  margin: auto;
 }
 
 #left-col {
@@ -48,11 +47,17 @@ table.dataTable thead .sorting_desc:before {
   right: auto !important;
 }
 .dataTables_info {
-  float: right;
+  float: left;
+  padding-bottom: 10px;
+  margin-left: 1%;
 }
 
-.dataTables_filter,
+.dataTables_filter {
+  margin-right: 20%;
+  padding-right: 25px;
+}
+
 .checkbox-area {
+  margin-left: 20%;
   padding-left: 25px;
-  float: left;
 }
